--- a/About_Me.ipynb
+++ b/About_Me.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNMoVAWPazZfrNN8sOwak40",
+      "authorship_tag": "ABX9TyMv29wmPGUHbiNrQRRE0Qz0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,9 +29,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#1.**Me**\n",
+        "#1.**Minerva**\n",
         "+ My name is Minerva\n",
         "+ My pronouns are *she/her/they*\n",
+        "+ My family and a few friends call me *Mine* which is a Spanish diminutive.\n",
+        "Pronounced Mee-nay\n",
+        "+ I was named after the Roman Goddess of Wisdom & War\n",
         "\n"
       ],
       "metadata": {
